# anti_corrupt

./: .env.example  .gitignore  Makefile  PROJECT_PLAN.md  README.md  USAGE.md  pyproject.toml
config/: editorial_rules.yaml  settings.py
config/prompts/: explain_institution.yaml  generate_profile.yaml  generate_timeline.yaml  relationship_mapping.yaml  summarize_news.yaml
config/style/: colors.yaml  fonts.yaml  templates.yaml
data/events/: _schema.yaml  constituicao_federal_1988.yaml  impeachment_dilma_2016.yaml  operacao_lava_jato.yaml
data/figures/: _schema.yaml  alexandre_de_moraes.yaml  luiz_inacio_lula_da_silva.yaml  rodrigo_pacheco.yaml
data/glossary/: _schema.yaml  terms.yaml
data/institutions/: _schema.yaml  camara_deputados.yaml  congresso_nacional.yaml  ministerio_publico_federal.yaml  presidencia_da_republica.yaml  senado_federal.yaml  supremo_tribunal_federal.yaml  tribunal_superior_eleitoral.yaml
data/relationships/: _schema.yaml  core_relationships.yaml
output/: cli_test.txt  commit_msg.txt  do_commit.py  git_log.txt  seed_db.py  test_history_result.txt
scripts/: _write_generate_cli.py  _write_review_cli.py  export_graph.py  validate_all_data.py
src/: __init__.py
src/ai/: __init__.py  client.py  explainer.py  prompts.py  summarizer.py
src/cli/: dashboard.py  generate.py  history.py  knowledge.py  main.py  publish.py  review.py  sources.py  visuals.py
src/content/: __init__.py  formatter.py  models.py  queue.py  storage.py
src/history/: __init__.py  models.py  store.py
src/knowledge/: graph.py  (+5 more)
tests/: __init__.py  conftest.py
(+46 files in other folders)
